@@ -14,3 +14,4 @@ pypi or custom url
 07-Nov-2010: fixing sdist package
 07-Nov-2010: fixing settings template to load correct url, fixing url into producction
 13-Nov-2010: fixing code that crash when changing directory names into local-apps external-apps
+25-Feb-2011: moving project/test to project/testing
